--- a/index.html
+++ b/index.html
@@ -1,78 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+    <link rel="stylesheet" href="style/style.css">
+    <script src="https://kit.fontawesome.com/eb0ac0c8fe.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ilza Medeiros</title>
 </head>
-    <link rel="stylesheet" href="style/style.css">
 <body>
     <header class="menu">
-        <img class="logo" src="./assets/WD.svg" alt="Logo">
-        <nav class="navbar">
-            <ul class="navbar-items">
-                <li><a class=" dark-pink-txt" href="">Home</a></li>
-                <li><a class=" dark-pink-txt" href="">Projects</a></li>
-                <li><a class=" dark-pink-txt" href="">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="banner">
-            <div class="row">
-                <div class="column">
+        <div class="container">
+            <nav>
+                <ul class="navbar-items">
+                    <li><a class=" txt-menu" href="">Home</a></li>
+                    <li><a class="txt-menu" href="">Projects</a></li>
+                    <li><a class="txt-menu" href="">Contact</a></li>
+                </ul>
+            </nav>
+                <div class="title">
                     <h1 class="main-title">
-                        <span class="light-pink-txt">Hi! I am A front-end</span> 
-                        <span class="dark-pink-txt"> Developer</span> 
+                        <span class="first-txt">Hi! I am A front-end</span> </br>
+                        <span class="second-txt"> Developer</span> 
                     </h1>
+                     <img class="foto-perfil" src="./assets/IMG_20180130_144547036.jpg" alt="foto de perfil">
                 </div>
-                <div class="column">
-                    <img src="./assets/IMG_20180130_144547036.jpg" alt="foto de perfil">
-                </div>
-            </div>
             <p class="description">
-                I’m a Web Developer, analysis and systems development student, livin in Recife - Brazil. I like
-                programming because I have opportunity to build new aplication and ideas, that have social impact and
-                change lives. I'm passionate about travel and colaboration.
+                    Meu nome é Ilza, sou uma Web Devepoler em construção e estudante de análise e desenvolvimento de sistemas. Tenho experiência com atendimento ao cliente nos 7 anos em que atuei como enfermeira. Me identifico com a programação pois tenho  a oportunidade de trazer impacto para a sociedade e mudar vidas através dela. Sou apaixonada por viagens, café, Jane Austen e Harry Potter.
             </p>
-        </section>
-        <section class="projects">
-            <div class="row">
-                <h1 class="heading-title">Projects</h1>
-                <div class="cards">
-                    <div class="card">
-                    <h5 class="card1-title">UI/UX Designer</h5>
-                    <p class="textcard1">I'm a freelance UI/UX design. I love designing simple and consistent web &
-                        mobile interfaces. </p>
-                    </div>
-                    <div class="card">
-                    <h5 class="card2-title">Front-end Developer</h5>
-                    <p class="textcard2">I like coding my own designs. I implement using HTML, CSS and basic Javascript.
-                        Recently, I'm using frameworks like React.</p>
-                    </div>
-                    <div class="card">
-                    <h5 class="card3-title">Scrum Certified</h5>
-                    <p class="textcard3">Scrum Foundation Professional Certificate by Certiprof. Credencial ID:
-                        31552956377688</p>
-                    </div>
-                </div>
-        </section>
-        <section class="contact">
-            <h1 class="heading-title">Contact</h1>
-            <div>
-                <p>I'm interested in freelance projects, remote work or just chatting about design, feel free to ping me.</p>
-                <a href="mailto:ilzammed2@gmail.com">ilzammed2@gmail.com</a>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div class="row">
-            <a href="https://instagram.com/ilzinhaa/"><img src="./assets/instagram.svg" alt="instagram icon"></a>
-            <a href="https://github.com/ilzinha"><img src="./assets/github.svg" alt="github icon"></a>
-            <a href="https://www.linkedin.com/in/ilza-medeiros-92a94481/"><img src="./assets/iconmonstr-linkedin-3.svg" alt="linkedin icon"></a>
         </div>
-    </footer>
+    </header>  
+    <main class="container-main"> 
+        <div class="projects">
+            <h1 class="heading-title">Skills</h1>
+            <div class="cards">
+                    <div class="card">
+                        <i class="fas fa-code" ></i>
+                        <div class="container"<>
+                            <h5 class="card-title">Front-end Developer</h5>
+                            <p class="textcard">Capacitada em Front-End pelo Women Dev Projects com conhecimentos básicos em UI/UX Design, HTLM5, CSS3, Javascript e React .</p>
+                            
+                        </div>
+                    </div>
+                    <div class="card">
+                        <i class="fas fa-code-branch"></i>
+                        <div class="container">
+                            <h5 class="card-title">Git/Github</h5>
+                            <p class="textcard">Utilizando versionamento de código em projetos.</p>
+                            
+                        </div>
+                    </div>
+                    <div class="card">
+                        <i class="fas fa-sync-alt"></i>
+                        <div class="container">
+                            <h5 class="card-title">Scrum Certified</h5>
+                            <p class="textcard">Scrum Foundation Professional Certificate by Certiprof. Credencial ID:
+                        31552956377688</p>
+                        </div>
+                    </div>
+            </div>
+            <div class="container-skills">
+                <div class="progress">
+                    <div class="progress-bar">HTML</div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar">CSS</div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar">UI/UX Design</div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar">Git/Github</div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar1">Javascript</div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar1">React</div>
+                </div>
+            </div>
+        </div> 
+    <div class="contact">
+                <h1 class="final-title">Vamos conversar!</h1>
+                <p class="final-txt">Estou interessada em projetos freelance, trabalhos remotos ou apenas conversar. Me envie um email!</p>
+                <p class="email">ilzammed2@gmail.com</p>
+    </div>
+    <div class="footer">
+            <a href="https://www.instagram.com/ilzinhaa/"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/ilzinha"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/ilza-medeiros-92a94481/"><i class="fab fa-linkedin"></i></a>
+    </div>
+    </main>    
 </body>
 </html>
