Ajuste de layout

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <header class="menu">
         <div class="container">
-            <nav>
+            <!--<nav>
                 <ul class="navbar-items">
                     <li><a class=" txt-menu" href="">Home</a></li>
                     <li><a class="txt-menu" href="">Projects</a></li>
                     <li><a class="txt-menu" href="">Contact</a></li>
                 </ul>
-            </nav>
+            </nav>-->
                 <div class="title">
                     <h1 class="main-title">
                         <span class="first-txt">Hi! I am A front-end</span> </br>
@@ -38,7 +38,7 @@
                         <i class="fas fa-code" ></i>
                         <div class="container"<>
                             <h5 class="card-title">Front-end Developer</h5>
-                            <p class="textcard">Capacitada em Front-End pelo Women Dev Projects com conhecimentos básicos em UI/UX Design, HTLM5, CSS3, Javascript e React .</p>
+                            <p class="textcard">Capacitada em Front-End pelo Women De com conhecimentos básicos em UI/UX Design, HTLM5, CSS3, Javascript e React .</p>
                             
                         </div>
                     </div>
@@ -80,11 +80,11 @@
                 </div>
             </div>
         </div> 
-    <div class="contact">
+        <div class="contact">
                 <h1 class="final-title">Vamos conversar!</h1>
                 <p class="final-txt">Estou interessada em projetos freelance, trabalhos remotos ou apenas conversar. Me envie um email!</p>
                 <p class="email">ilzammed2@gmail.com</p>
-    </div>
+        </div>
     <div class="footer">
             <a href="https://www.instagram.com/ilzinhaa/"><i class="fab fa-instagram"></i></a>
             <a href="https://github.com/ilzinha"><i class="fab fa-github"></i></a>
